# f1-autonomous-car

./: README.md  README.txt
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/lidar-move/: drive_param.h  drive_values.h  pid_input.h
catkin_ws/devel/include/lidarMove/: drive_param.h  drive_values.h  pid_input.h
catkin_ws/devel/include/lidar_move/: drive_param.h  drive_values.h  pid_input.h
catkin_ws/devel/lib/f1-move/: mapmove  (+1 more)
catkin_ws/src/: readme.md
catkin_ws/src/Twist2Ack/: CMakeLists.txt
catkin_ws/src/f1tenth_control/: CMakeLists.txt  package.xml
catkin_ws/src/f1tenth_description/: CMakeLists.txt  package.xml~
catkin_ws/src/f1tenth_gazebo/: CMakeLists.txt
catkin_ws/src/moving/: CMakeLists.txt
catkin_ws/src/read_Laser/: CMakeLists.txt  package.xml
catkin_ws/src/read_Laser/launch/: lidarMove.launch
catkin_ws/src/read_Laser/scripts/: convertToAckermann.py  distFind.py  followWall.py  lidar_wallFollow.py  pdControl.py
catkin_ws/src/read_map/: CMakeLists.txt
catkin_ws/src/teb/: robot_carlike_in_stage.launch
catkin_ws/src/vision/: CMakeLists.txt  package.xml
catkin_ws/src/vision/scripts/: showIm.py
f1_tenth_sim/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
husky_gazebo/launch/: husky_empty_world.launch  husky_empty_world.launch~  koridor3.launch
husky_navigation/launch/hector_slam/: frames.gv  hector_slam.launch  hector_slam_astar_teb.launch  hector_slam_astar_teb.launch~
listen/: CMakeLists.txt~  package.xml  package.xml~
listen/src/: tfListen.cpp~
teb/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
(+170 files in other folders)
